--- a/index.html
+++ b/index.html
@@ -1,176 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>TG-SAMARTH</title>
-
-  <!-- Plyr and HLS.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.css" />
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
-
+  <meta charset="UTF-8">
+  <title>astro-cricket</title>
   <style>
-    html { font-family: sans-serif; background: #000; margin: 0; padding: 0; }
-    body { margin: 0; padding: 0; background: #000; }
-
-    .plyr {
-      height: 100%;
-      width: 100%;
-    }
-
-    :root {
-      --plyr-color-main: #d9230f;
-    }
-
-    .loading {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
+    html, body {
+      margin: 0;
+      padding: 0;
       height: 100%;
       background: #000;
-      z-index: 9999;
+      overflow: hidden;
     }
-
-    .loading-text {
-      position: absolute;
-      top: 0; bottom: 0; left: 0; right: 0;
-      margin: auto;
-      text-align: center;
-      width: 100%;
-      height: 100px;
-      line-height: 100px;
-    }
-
-    .loading-text span {
-      display: inline-block;
-      margin: 0 5px;
-      color: #d9230f;
-      font-family: 'Quattrocento Sans', sans-serif;
-      animation: blur-text 1.5s infinite linear alternate;
-    }
-
-    .loading-text span:nth-child(n) {
-      animation-delay: calc(0.2s * var(--i));
-    }
-
-    @keyframes blur-text {
-      0% { filter: blur(0px); }
-      100% { filter: blur(4px); }
-    }
-
-    .iframe-wrapper {
-      display: none;
-      width: 100%;
+    iframe {
+      width: 100vw;
       height: 100vh;
-      position: relative;
-    }
-
-    .iframe-wrapper iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
       border: none;
     }
   </style>
 </head>
-
 <body>
-
-  <!-- Loading screen -->
-  <div id="loading" class="loading">
-    <div class="loading-text">
-      <span style="--i:0;">T</span>
-      <span style="--i:1;">G</span>
-      <span style="--i:2;">-</span>
-      <span style="--i:3;">S</span>
-      <span style="--i:4;">A</span>
-      <span style="--i:5;">M</span>
-      <span style="--i:6;">A</span>
-      <span style="--i:7;">R</span>
-      <span style="--i:8;">T</span>
-      <span style="--i:9;">H</span>
-    </div>
-  </div>
-
-  <!-- Video Player -->
-  <div id="video-container">
-    <video id="player" autoplay controls crossorigin playsinline style="width: 100%; display: none;">
-      <source id="video-source" type="application/vnd.apple.mpegurl" src="">
-    </video>
-  </div>
-
-  <!-- Iframe Fallback -->
-  <div class="iframe-wrapper" id="iframe-wrapper">
-    <iframe id="iframe-player" allowfullscreen sandbox="allow-same-origin allow-scripts allow-top-navigation allow-presentation"></iframe>
-  </div>
-
-  <!-- Telegram alert -->
-  <script>
-    alert("JOIN MY TELEGRAM CHANNEL: LIVE LINKS BY TEAMROHITOFFICAL45");
-  </script>
-
-  <!-- Load stream -->
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const streamUrl = urlParams.get("id");
-
-    const videoEl = document.getElementById("player");
-    const sourceEl = document.getElementById("video-source");
-    const iframeWrapper = document.getElementById("iframe-wrapper");
-    const iframeEl = document.getElementById("iframe-player");
-
-    setTimeout(() => {
-      document.getElementById("loading").style.display = "none";
-    }, 1000);
-
-    if (streamUrl && streamUrl.trim() !== "") {
-      if (streamUrl.endsWith(".m3u8")) {
-        sourceEl.src = streamUrl;
-        videoEl.style.display = "block";
-
-        document.addEventListener("DOMContentLoaded", () => {
-          const config = { maxMaxBufferLength: 100 };
-          const options = {};
-
-          if (Hls.isSupported()) {
-            const hls = new Hls(config);
-            hls.loadSource(streamUrl);
-            hls.attachMedia(videoEl);
-            hls.on(Hls.Events.MANIFEST_PARSED, function () {
-              const levels = hls.levels.map(level => level.height);
-              options.quality = {
-                default: levels[0],
-                options: levels,
-                forced: true,
-                onChange: (level) => {
-                  hls.levels.forEach((lvl, index) => {
-                    if (lvl.height === level) {
-                      hls.currentLevel = index;
-                    }
-                  });
-                }
-              };
-              new Plyr(videoEl, options);
-            });
-            window.hls = hls;
-          } else {
-            new Plyr(videoEl, options);
-          }
-        });
-
-      } else {
-        // Fallback to iframe
-        iframeWrapper.style.display = "block";
-        iframeEl.src = streamUrl;
-      }
-    } else {
-      alert("Missing or invalid stream URL. Use ?id=YOUR_STREAM_URL");
-    }
-  </script>
-
+  <iframe 
+    src="https://idx.gdplayertv.to/live-tv/astro-cricket/?embed=1&mute=0" 
+    sandbox="allow-scripts allow-same-origin"
+    allow="autoplay; fullscreen">
+  </iframe>
 </body>
 </html>
