--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TEAMROHITOFFICAL45_LIVE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
   <style>
-    /* Styling remains the same as your original code */
     body {
       margin: 0;
       padding: 0;
@@ -16,6 +16,7 @@
       font-family: 'Poppins', sans-serif;
       cursor: url('https://cdn-icons-png.flaticon.com/512/892/892634.png') 16 16, auto;
     }
+
     header {
       position: fixed;
       top: 0;
@@ -31,12 +32,14 @@
       z-index: 1000;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     }
+
     .site-title {
       display: flex;
       flex-direction: column;
       justify-content: center;
       line-height: 1.1;
     }
+
     .brand-main {
       font-family: 'Oswald', sans-serif;
       font-size: 20px;
@@ -45,6 +48,7 @@
       text-transform: uppercase;
       letter-spacing: 1px;
     }
+
     .brand-sub {
       font-family: 'Poppins', sans-serif;
       font-size: 12px;
@@ -53,6 +57,7 @@
       text-transform: uppercase;
       letter-spacing: 0.5px;
     }
+
     .material-symbols-outlined {
       font-size: 30px;
       color: #fff;
@@ -60,9 +65,38 @@
       transition: 0.3s;
       font-family: 'Material Symbols Outlined';
     }
+
     .material-symbols-outlined:hover {
       color: gold;
     }
+
+    .league {
+      font-size: 13px;
+      text-align: center;
+      text-transform: uppercase;
+      background: linear-gradient(90deg, #FFFFFF, white);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
+      letter-spacing: 0.8px;
+      text-shadow: 0 0 6px rgba(255, 215, 0, 0.3);
+      margin-bottom: 6px;
+    }
+
+    .divider {
+      width: 60%;
+      height: 1px;
+      margin: 0 auto 6px;
+      background: linear-gradient(90deg, transparent, gold, transparent);
+      border-radius: 5px;
+    }
+
+    .time {
+      font-size: 12px;
+      color: #aaa;
+      text-align: center;
+    }
+
     .search-input {
       position: absolute;
       top: 100%;
@@ -79,17 +113,20 @@
       transition: width 0.4s ease, opacity 0.4s ease;
       font-size: 14px;
     }
+
     .search-input.active {
       width: 220px;
       opacity: 1;
       border-image: linear-gradient(90deg, gold, #ffcc00) 1;
       animation: borderSearch 2s linear infinite;
     }
+
     @keyframes borderSearch {
       0% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
       50% { border-image-source: linear-gradient(270deg, gold, #ffcc00); }
       100% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
     }
+
     .event-container {
       display: flex;
       flex-wrap: wrap;
@@ -97,6 +134,7 @@
       gap: 20px;
       padding: 90px 20px 20px;
     }
+
     .event {
       position: relative;
       width: 360px;
@@ -109,16 +147,17 @@
       transition: transform 0.3s, box-shadow 0.3s;
       border: 1px solid rgba(255, 215, 0, 0.4);
     }
+
     .event:hover {
       box-shadow: 0 0 15px rgba(255, 215, 0, 0.5), 0 0 30px rgba(255, 215, 0, 0.3);
       transform: scale(1.04);
-    }
-    .event img {
+    }.event img {
       width: 100%;
       height: 220px;
       object-fit: cover;
       border-bottom: 1px solid rgba(255,255,255,0.1);
     }
+
     .event-content {
       padding: 18px;
       display: flex;
@@ -126,6 +165,7 @@
       justify-content: space-between;
       gap: 10px;
     }
+
     .teams {
       font-family: 'Oswald', sans-serif;
       font-size: 24px;
@@ -135,23 +175,7 @@
       text-transform: uppercase;
       letter-spacing: 0.5px;
     }
-    .league {
-      font-size: 13px;
-      text-align: center;
-      text-transform: uppercase;
-      background: linear-gradient(90deg, #FFFFFF, white);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-weight: 700;
-      letter-spacing: 0.8px;
-      text-shadow: 0 0 6px rgba(255, 215, 0, 0.3);
-      margin-bottom: 6px;
-    }
-    .time {
-      font-size: 12px;
-      color: #aaa;
-      text-align: center;
-    }
+
     .btn-primary {
       display: inline-block;
       padding: 9px 18px;
@@ -165,10 +189,12 @@
       transition: 0.3s;
       margin-top: 5px;
     }
+
     .btn-primary:hover {
       background: linear-gradient(90deg, gold, #ffcc00);
       box-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
     }
+
     .live-badge {
       position: absolute;
       top: 10px;
@@ -184,15 +210,18 @@
       z-index: 5;
       animation: pulseLive 1.5s infinite;
     }
+
     @keyframes heartbeat {
       0%, 100% { transform: scale(1); }
       25%, 75% { transform: scale(1.02); }
       50% { transform: scale(1); }
     }
+
     @keyframes pulseLive {
       0%, 100% { box-shadow: 0 0 8px red; }
       50% { box-shadow: 0 0 18px rgba(255, 0, 0, 0.8); }
     }
+
     .loader {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -203,6 +232,7 @@
       z-index: 2000;
       flex-direction: column;
     }
+
     .loader:before {
       content: "";
       width: 60px;
@@ -213,6 +243,7 @@
       animation: spin 1.2s linear infinite;
       margin-bottom: 15px;
     }
+
     .loader-text {
       color: #fff;
       font-family: 'Oswald', sans-serif;
@@ -221,10 +252,12 @@
       letter-spacing: 2px;
       animation: pulse 1.8s infinite;
     }
+
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+
     @keyframes pulse {
       0%, 100% { opacity: 1; }
       50% { opacity: 0.4; }
@@ -249,9 +282,9 @@
 <script>
   async function fetchAvailableEvents() {
     try {
-      const response = await fetch("https://raw.githubusercontent.com/Jitendraunatti/fancode/refs/heads/main/data/fancode.json");
+      const response = await fetch("https://lchdxfc.valid32784.workers.dev/fancode.json");
       const data = await response.json();
-      window.allEvents = data.matches || [];
+      window.allEvents = data.matches.filter(event => event.startTime);
       displayEvents(window.allEvents);
       document.getElementById("loader").style.display = "none";
     } catch (error) {
@@ -265,29 +298,27 @@
     container.innerHTML = "";
 
     events.forEach(event => {
-      const videoLink = event.adfree_url || event.dai_url;
+      const eventDiv = document.createElement("div");
+      eventDiv.classList.add("event");const videoLink = event.adfree_url || event.dai_url;
       const hasStream = Boolean(videoLink);
-      const isLive = (event.status || '').toLowerCase() === 'live';
+      const isLive = event.status && event.status.toLowerCase() === 'live';
       const adfreeLink = event.adfree_url;
 
-      const eventDiv = document.createElement("div");
-      eventDiv.className = "event";
-
-      eventDiv.innerHTML = `
-        ${hasStream && isLive ? `<div class="live-badge">LIVE</div>` : ''}
-        <img src="${event.src || 'https://via.placeholder.com/360x220?text=No+Image'}" alt="${event.title || 'Match'}">
+      eventDiv.innerHTML = 
+        ${hasStream && isLive ? <div class="live-badge">LIVE</div> : ''}
+        <img src="${event.src}" alt="${event.title}">
         <div class="event-content">
-          <div class="teams">${event.team_1 || 'Team A'} vs ${event.team_2 || 'Team B'}</div>
-          <div class="league">${event.event_name || 'Unknown League'}</div>
-          <div class="time">${event.startTime || 'Time Not Available'}</div>
+          <div class="teams">${event.team_1} vs ${event.team_2}</div>
+          <div class="league">${event.event_name}</div>
+          <div class="time">${event.startTime}</div>
           ${hasStream
-            ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${videoLink}" target="_blank" class="btn-primary">Watch Now</a>`
-            : `<span class="btn-primary" style="background:gray;cursor:default;opacity:0.6;">Coming Soon</span>`}
+            ? <a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${videoLink}" target="_blank" class="btn-primary">Watch Now</a>
+            : <span class="btn-primary" style="background:gray;cursor:default;opacity:0.6;">Coming Soon</span>}
           ${adfreeLink
-            ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${adfreeLink}" target="_blank" class="btn-primary">Ad-Free</a>`
+            ? <a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${adfreeLink}" target="_blank" class="btn-primary">Ad-Free</a>
             : ''}
         </div>
-      `;
+      ;
       container.appendChild(eventDiv);
     });
   }
@@ -306,7 +337,7 @@
   document.getElementById("searchInput").addEventListener("input", e => {
     const searchTerm = e.target.value.toLowerCase();
     const filtered = window.allEvents.filter(event =>
-      `${event.team_1} ${event.team_2} ${event.event_name}`.toLowerCase().includes(searchTerm)
+      ${event.team_1} ${event.team_2} ${event.event_name}.toLowerCase().includes(searchTerm)
     );
     displayEvents(filtered);
   });
