--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <script>
   async function fetchAvailableEvents() {
     try {
-      const response = await fetch("https://github.com/drmlive/fancode-live-events/blob/main/fancode.json");
+      const response = await fetch("https://raw.githubusercontent.com/Odfinity/live-events/refs/heads/main/fancode/data.json");
       const data = await response.json();
       window.allEvents = data.matches.filter(event => event.startTime);
       displayEvents(window.allEvents);
