--- a/index.html
+++ b/index.html
@@ -1,339 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TEAMROHITOFFICAL45_LIVE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-
+  <meta charset="UTF-8">
+  <title>Live TV Player</title>
+  <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background: #0e0e0e;
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #111;
       color: #fff;
-      font-family: 'Poppins', sans-serif;
-      cursor: url('https://cdn-icons-png.flaticon.com/512/892/892634.png') 16 16, auto;
     }
-
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 70px;
-      background: rgba(14, 14, 14, 0.9);
-      backdrop-filter: blur(12px);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 20px;
-      z-index: 1000;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    h1 {
+      text-align: center;
     }
-
-    .site-title {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      line-height: 1.1;
-    }
-
-    .brand-main {
-      font-family: 'Oswald', sans-serif;
-      font-size: 20px;
-      font-weight: 700;
-      color: gold;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .brand-sub {
-      font-size: 12px;
-      font-weight: 600;
-      color: #ffcc00;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-    }
-
-    .material-symbols-outlined {
-      font-size: 30px;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.3s;
-      font-family: 'Material Symbols Outlined';
-    }
-
-    .material-symbols-outlined:hover {
-      color: gold;
-    }
-
-    .search-input {
-      position: absolute;
-      top: 100%;
-      right: 20px;
-      margin-top: 5px;
-      padding: 10px 20px;
-      border-radius: 25px;
-      background-color: rgba(255, 255, 255, 0.05);
-      border: 2px solid #ffcc00;
-      color: #fff;
-      outline: none;
-      width: 0;
-      opacity: 0;
-      transition: width 0.4s ease, opacity 0.4s ease;
-      font-size: 14px;
-    }
-
-    .search-input.active {
-      width: 220px;
-      opacity: 1;
-      border-image: linear-gradient(90deg, gold, #ffcc00) 1;
-      animation: borderSearch 2s linear infinite;
-    }
-
-    @keyframes borderSearch {
-      0% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
-      50% { border-image-source: linear-gradient(270deg, gold, #ffcc00); }
-      100% { border-image-source: linear-gradient(90deg, gold, #ffcc00); }
-    }
-
-    .event-container {
+    .channel-list {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 90px 20px 20px;
-    }
-
-    .event {
-      position: relative;
-      width: 360px;
-      background: linear-gradient(145deg, #1e1e1e, #292929);
-      border-radius: 16px;
-      overflow: hidden;
-      padding-bottom: 15px;
-      animation: heartbeat 5s infinite;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.15);
-      transition: transform 0.3s, box-shadow 0.3s;
-      border: 1px solid rgba(255, 215, 0, 0.4);
-    }
-
-    .event:hover {
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.5), 0 0 30px rgba(255, 215, 0, 0.3);
-      transform: scale(1.04);
-    }
-
-    .event img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
-    }
-
-    .event-content {
-      padding: 18px;
-      display: flex;
-      flex-direction: column;
       gap: 10px;
+      max-height: 400px;
+      overflow-y: auto;
+      padding: 0;
+      list-style: none;
     }
-
-    .teams {
-      font-family: 'Oswald', sans-serif;
-      font-size: 24px;
-      font-weight: 700;
-      color: #fff;
-      text-align: center;
-      text-transform: uppercase;
-    }
-
-    .league {
-      font-size: 13px;
-      text-align: center;
-      text-transform: uppercase;
-      background: linear-gradient(90deg, #FFFFFF, white);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-weight: 700;
-      letter-spacing: 0.8px;
-      text-shadow: 0 0 6px rgba(255, 215, 0, 0.3);
-      margin-bottom: 6px;
-    }
-
-    .time {
-      font-size: 12px;
-      color: #aaa;
-      text-align: center;
-    }
-
-    .btn-primary {
-      display: inline-block;
-      padding: 9px 18px;
-      background: linear-gradient(90deg, #ffcc00, gold);
-      color: #121212;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.4);
-      text-align: center;
-      transition: 0.3s;
-      margin-top: 5px;
-    }
-
-    .btn-primary:hover {
-      background: linear-gradient(90deg, gold, #ffcc00);
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
-    }
-
-    .live-badge {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: red;
-      color: #fff;
-      padding: 3px 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      box-shadow: 0 0 5px rgba(255,0,0,0.6);
-      z-index: 5;
-      animation: pulseLive 1.5s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      25%, 75% { transform: scale(1.02); }
-      50% { transform: scale(1); }
-    }
-
-    @keyframes pulseLive {
-      0%, 100% { box-shadow: 0 0 8px red; }
-      50% { box-shadow: 0 0 18px rgba(255, 0, 0, 0.8); }
-    }
-
-    .loader {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: #0e0e0e;
+    .channel-item {
+      background: #222;
+      border-radius: 8px;
+      padding: 10px;
+      width: 200px;
       display: flex;
       align-items: center;
-      justify-content: center;
-      z-index: 2000;
-      flex-direction: column;
+      cursor: pointer;
+      transition: background 0.2s;
     }
-
-    .loader:before {
-      content: "";
-      width: 60px;
-      height: 60px;
-      border: 5px solid gold;
-      border-top: 5px solid transparent;
-      border-radius: 50%;
-      animation: spin 1.2s linear infinite;
-      margin-bottom: 15px;
+    .channel-item:hover {
+      background: #333;
     }
-
-    .loader-text {
-      color: #fff;
-      font-family: 'Oswald', sans-serif;
-      font-size: 20px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      animation: pulse 1.8s infinite;
+    .channel-item img {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
+      margin-right: 10px;
     }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes pulse {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.4; }
+    .video-wrapper {
+      text-align: center;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-<div class="loader" id="loader"><div class="loader-text">Loading...</div></div>
+<h1>📺 Live TV Channels</h1>
+<ul id="channels" class="channel-list"></ul>
 
-<header>
-  <div class="site-title">
-    <span class="brand-main">TEAMROHITOFFICAL45</span>
-    <span class="brand-sub">FEMCODE</span>
-  </div>
-  <span class="material-symbols-outlined" id="searchToggle">search</span>
-  <input type="text" class="search-input" id="searchInput" placeholder="Search match...">
-</header>
+<div class="video-wrapper">
+  <video id="player" class="video-js vjs-default-skin" controls preload="auto" width="720" height="405"></video>
+</div>
 
-<div class="event-container" id="events"></div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.21.1/video.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/1.5.0/hls.min.js"></script>
 <script>
-  async function fetchAvailableEvents() {
-    try {
-      const response = await fetch("https://raw.githubusercontent.com/Odfinity/live-events/refs/heads/main/fancode/data.json");
-      const data = await response.json();
-      window.allEvents = data.matches.filter(event => event.startTime);
-      displayEvents(window.allEvents);
-      document.getElementById("loader").style.display = "none";
-    } catch (error) {
-      console.error("Error fetching events:", error);
-      document.getElementById("loader").innerHTML = "<div class='loader-text'>Failed to load!</div>";
-    }
-  }
+  const player = videojs('player');
 
-  function displayEvents(events) {
-    const container = document.getElementById("events");
-    container.innerHTML = "";
-
-    events.forEach(event => {
-      const videoLink = event.adfree_url || event.dai_url;
-      const hasStream = Boolean(videoLink);
-      const isLive = event.status && event.status.toLowerCase() === 'live';
-      const adfreeLink = event.adfree_url;
-
-      const eventHTML = `
-        <div class="event">
-          ${hasStream && isLive ? `<div class="live-badge">LIVE</div>` : ""}
-          <img src="${event.src}" alt="${event.title}">
-          <div class="event-content">
-            <div class="teams">${event.team_1} vs ${event.team_2}</div>
-            <div class="league">${event.event_name}</div>
-            <div class="time">${event.startTime}</div>
-            ${hasStream 
-              ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${videoLink}" target="_blank" class="btn-primary">Watch Now</a>` 
-              : `<span class="btn-primary" style="background:gray;cursor:default;opacity:0.6;">Coming Soon</span>`}
-            ${adfreeLink 
-              ? `<a href="https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${adfreeLink}" target="_blank" class="btn-primary">Ad-Free</a>` 
-              : ""}
-          </div>
-        </div>`;
-      container.innerHTML += eventHTML;
-    });
-  }
-
-  document.getElementById("searchToggle").addEventListener("click", () => {
-    const input = document.getElementById("searchInput");
-    input.classList.toggle("active");
-    if (input.classList.contains("active")) {
-      input.focus();
+  function setupStream(url) {
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(url);
+      hls.attachMedia(player.tech().el());
+      player.play();
     } else {
-      input.value = "";
-      displayEvents(window.allEvents);
+      player.src({ src: url, type: 'application/vnd.apple.mpegurl' });
+      player.play();
     }
-  });
+  }
 
-  document.getElementById("searchInput").addEventListener("input", e => {
-    const searchTerm = e.target.value.toLowerCase();
-    const filtered = window.allEvents.filter(event =>
-      (`${event.team_1} ${event.team_2} ${event.event_name}`.toLowerCase().includes(searchTerm))
-    );
-    displayEvents(filtered);
-  });
+  fetch('https://raw.githubusercontent.com/abusaeeidx/CricHD-Scraper-V2/main/playlist.m3u')
+    .then(res => res.text())
+    .then(text => {
+      const lines = text.split('\n');
+      const channels = [];
+      for (let i = 0; i < lines.length; i++) {
+        if (lines[i].startsWith('#EXTINF')) {
+          const name = lines[i].match(/,(.*)$/)?.[1]?.trim() || 'Unknown';
+          const logo = lines[i].match(/tvg-logo="(.*?)"/)?.[1] || '';
+          const stream = lines[i+1]?.trim();
+          if (stream) {
+            channels.push({ name, logo, stream });
+          }
+        }
+      }
 
-  fetchAvailableEvents();
+      const list = document.getElementById('channels');
+      channels.forEach(({ name, logo, stream }) => {
+        const li = document.createElement('li');
+        li.className = 'channel-item';
+        li.innerHTML = `
+          ${logo ? `<img src="${logo}" alt="logo">` : ''}
+          <span>${name}</span>
+        `;
+        li.onclick = () => setupStream(stream);
+        list.appendChild(li);
+      });
+    })
+    .catch(err => {
+      console.error('Error fetching M3U file:', err);
+    });
 </script>
 
 </body>
