--- a/index.html
+++ b/index.html
@@ -1,110 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Live TV Player</title>
-  <link href="https://vjs.zencdn.net/7.21.1/video-js.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #111;
-      color: #fff;
-    }
-    h1 {
-      text-align: center;
-    }
-    .channel-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      max-height: 400px;
-      overflow-y: auto;
-      padding: 0;
-      list-style: none;
-    }
-    .channel-item {
-      background: #222;
-      border-radius: 8px;
-      padding: 10px;
-      width: 200px;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .channel-item:hover {
-      background: #333;
-    }
-    .channel-item img {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin-right: 10px;
-    }
-    .video-wrapper {
-      text-align: center;
-      margin-top: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teamrohitoffical45_live</title>
+    <style>
+        /* General Page Styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #242424, #3b5998);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+
+        /* Glowing Effect for Message */
+        .loading-message {
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffcc00;
+            margin-bottom: 10px;
+            padding: 10px 20px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            text-align: center;
+            box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
+            animation: glow 1.5s infinite alternate;
+        }
+
+        @keyframes glow {
+            0% { box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00; }
+            100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
+        }
+
+        /* Video Player Styling */
+        .player-container {
+            width: 95%;
+            max-width: 1200px;
+            margin: 20px auto;
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
+            border-radius: 15px;
+            overflow: hidden;
+            background: #000;
+        }
+
+        .player-container iframe {
+            border-radius: 15px;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Join Telegram Button */
+        .join-telegram-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .join-telegram-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            background-color: #008fd6;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .join-telegram-btn:hover {
+            background-color: #006bb3;
+        }
+    </style>
 </head>
 <body>
 
-<h1>📺 Live TV Channels</h1>
-<ul id="channels" class="channel-list"></ul>
+    <!-- Loading Message -->
+    <div class="loading-message">Share The Links With Your Friends</div>
 
-<div class="video-wrapper">
-  <video id="player" class="video-js vjs-default-skin" controls preload="auto" width="720" height="405"></video>
-</div>
+    <!-- Video Player Section -->
+    <div class="player-container">
+        <div style="padding:56.25% 0 0 0;position:relative;">
+            <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" 
+            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
+            src="https://tvgo.neocities.org/APPTV/tata?id=24&key=aphjriivss&name=DW" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        </div>
+    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.21.1/video.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/1.5.0/hls.min.js"></script>
+    <!-- Join Telegram Button -->
+    <div class="join-telegram-container">
+        <button class="join-telegram-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">Join Telegram Channel</button>
+    </div>
 <script>
-  const player = videojs('player');
-
-  function setupStream(url) {
-    if (Hls.isSupported()) {
-      const hls = new Hls();
-      hls.loadSource(url);
-      hls.attachMedia(player.tech().el());
-      player.play();
-    } else {
-      player.src({ src: url, type: 'application/vnd.apple.mpegurl' });
-      player.play();
-    }
-  }
-
-  fetch('https://raw.githubusercontent.com/abusaeeidx/CricHD-Scraper-V2/main/playlist.m3u')
-    .then(res => res.text())
-    .then(text => {
-      const lines = text.split('\n');
-      const channels = [];
-      for (let i = 0; i < lines.length; i++) {
-        if (lines[i].startsWith('#EXTINF')) {
-          const name = lines[i].match(/,(.*)$/)?.[1]?.trim() || 'Unknown';
-          const logo = lines[i].match(/tvg-logo="(.*?)"/)?.[1] || '';
-          const stream = lines[i+1]?.trim();
-          if (stream) {
-            channels.push({ name, logo, stream });
-          }
-        }
-      }
-
-      const list = document.getElementById('channels');
-      channels.forEach(({ name, logo, stream }) => {
-        const li = document.createElement('li');
-        li.className = 'channel-item';
-        li.innerHTML = `
-          ${logo ? `<img src="${logo}" alt="logo">` : ''}
-          <span>${name}</span>
-        `;
-        li.onclick = () => setupStream(stream);
-        list.appendChild(li);
-      });
-    })
-    .catch(err => {
-      console.error('Error fetching M3U file:', err);
-    });
+// alert('Join Our Telegram For Latest update')
+         if (confirm("Join Our Telegram Channel @teamrohitofficial45") == true) {
+         window.open("
+https://t.me/+IhSW51QysxU3NzY1", '_blank');
+     }
+</script>
+<script>
+// alert('Join Our Telegram For Latest update')
+         if (confirm("Join Our Telegram Channel @teamrohitofficial45) == true) {
+         window.open("https://t.me/+lkbpBqFd0FljNzJl", '_blank');
+     }
 </script>
 
 </body>
