--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       streamUrl = decodeURIComponent(streamUrl);
 
       if (streamUrl.endsWith(".m3u8")) {
-        // ✅ Play with HLS
+        // ✅ HLS Player
         sourceEl.src = streamUrl;
         videoEl.style.display = "block";
 
@@ -171,7 +171,7 @@
           new Plyr(videoEl);
         }
       } else {
-        // ✅ Force load inside iframe
+        // ✅ Any other → Iframe
         iframeEl.src = streamUrl;
         iframeWrapper.style.display = "block";
       }
