--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Teamrohitoffical45_live</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+      font-family: 'Arial', sans-serif;
       background: linear-gradient(135deg, #242424, #3b5998);
       color: #fff;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
       text-align: center;
     }
 
@@ -23,7 +22,7 @@
       font-size: 18px;
       font-weight: bold;
       color: #ffcc00;
-      margin-bottom: 10px;
+      margin-top: 10px;
       padding: 10px 20px;
       border-radius: 10px;
       background: rgba(255, 255, 255, 0.1);
@@ -38,6 +37,7 @@
     }
 
     .player-container {
+      flex: 1;
       width: 95%;
       max-width: 1200px;
       margin: 20px auto;
@@ -45,16 +45,18 @@
       border-radius: 15px;
       overflow: hidden;
       background: #000;
+      display: flex;
     }
 
     .player-container iframe {
-      border-radius: 15px;
       width: 100%;
       height: 100%;
+      border: none;
+      border-radius: 15px;
     }
 
     .join-telegram-container {
-      margin-top: 20px;
+      margin: 20px 0;
     }
 
     .join-telegram-btn {
@@ -79,16 +81,12 @@
   <div class="loading-message">Share The Links With Your Friends</div>
 
   <div class="player-container">
-    <div style="padding:56.25% 0 0 0;position:relative;">
-      <iframe id="contentFrame"
-              sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
-              frameborder="0"
-              allow="encrypted-media"
-              allowfullscreen
-              scrolling="no"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;">
-      </iframe>
-    </div>
+    <iframe id="contentFrame"
+            sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"
+            allow="encrypted-media"
+            allowfullscreen
+            scrolling="no">
+    </iframe>
   </div>
 
   <div class="join-telegram-container">
